--- a/layouts/login.htm
+++ b/layouts/login.htm
@@ -7,87 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background: url(bg.jpg);
-            font-size: 18pt;
-            color: white;
-            text-align: center;
-        }
-        h1 {
-            color: red;
-            font-weight: bolder;
-            font-size: 30pt;
-            font-family: 'Bebas Neue', sans-serif; 
-            padding: 20px 120px;
-            text-align: left;
-        }
-        header {
-            height: 100px;
-        }
-        #div-btn {
-            text-align: right;
-            display: flexbox;
-            margin: -60px 100px;
-        }
-        #btn-entrar {
-            color: white;
-            font-size: 12pt;
-            font-weight: bold;
-            background-color: red;
-            width: 80px;
-            height: 30px;
-            border-radius: 5px;
-            border: none;
-        }
-        #caixa {
-            background-color: rgba(0, 0, 0, 0.619); height: 600px;
-            width: 400px;
-            padding: 20px;
-            margin-left: auto;
-            margin-right: auto;
-
-        }
-        .caixas-txt {
-            width: 300px;
-            height: 50px;
-            margin: 10px;
-            border-radius: 3px;
-            padding: 5px;
-            background-color: rgba(0, 0, 0, 0.468);
-        }
-        #btn-login {
-            color: white;
-            font-size: 12pt;
-            background-color: red;
-            width: 300px;
-            height: 50px;
-            border: none;
-            border-radius: 3px;
-            font-weight: bold;
-            margin: 20px;
-        }
-        #btn-cd {
-            color: white;
-            font-size: 12pt;
-            background-color: rgba(255, 255, 255, 0.23);
-            width: 300px;
-            height: 50px;
-            border: none;
-            border-radius: 3px;
-            font-weight: bold;
-            margin: 20px;
-        }
-        p {
-            font-size: 12pt;
-            padding: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="/src/css/estilo-login.css">
 </head>
 <body>
     <header>
