--- a/layouts/netflix.htm
+++ b/layouts/netflix.htm
@@ -7,41 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <style>
-        body {
-            background-color: #141414;
-            color: white;
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        h1 {
-            margin-top: 200px;
-            font-size: 30pt;
-        }
-        img {
-            max-width: 150px;
-            max-height: 150px;
-            padding: 5px;
-        }
-        #btn-perfis {
-            margin: 30px;
-            width: 170px;
-            height: 40px;
-            font-size: 12pt;
-            color: white;
-            background-color: #141414;
-            border: 2px solid white;
-        }
-    </style>
+    <link rel="stylesheet" href="/src/css/estilo-netflix.css">
 </head>
 <body>
     <section>
         <h1>Quem está assistindo?</h1>
         <div class="row">
-            <img src="perfil1.png" alt="Imagem Perfil 1" class="col">
-            <img src="perfil2.png" alt="Imagem Perfil 2" class="col">
-            <img src="perfil3.png" alt="Imagem Perfil 3" class="col">
-            <img src="perfil4.jpg" alt="Imagem Perfil 4" class="col">
+            <img src="/images/perfil1.png" alt="Imagem Perfil 1" class="col">
+            <img src="/images/perfil2.png" alt="Imagem Perfil 2" class="col">
+            <img src="/images/perfil3.png" alt="Imagem Perfil 3" class="col">
+            <img src="/images/perfil4.jpg" alt="Imagem Perfil 4" class="col">
         </div>
         <input type="button" value="Gerenciar Perfis" id="btn-perfis">
     </section>
