--- a/layouts/index.htm
+++ b/layouts/index.htm
@@ -7,19 +7,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/css/estilo-index.css">
+    <link rel="stylesheet" href="css/estilo-index.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>FakeFlix</h1>
+            <h1><a href="#">FakeFlix</a></h1>
             <div id="div-btn">
                 <a href="login.htm"><input type="button" value="Entrar" id="btn-entrar"></a>
             </div>
         </nav>
     </header>
     <section>
-        <div style="background-color: rgba(0, 0, 0, 0,182)">
+        <div id="caixa">
             <h2>Filmes, séries e muito mais, sem limites</h2>
             <p>Assista onde quiser. Cancele quando quiser.</p>
             <p>Quer assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
