--- a/layouts/login.htm
+++ b/layouts/login.htm
@@ -7,12 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/css/estilo-login.css">
+    <link rel="stylesheet" href="css/estilo-login.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>FakeFlix</h1>
+            <h1><a href="index.htm" style="text-decoration: none; color: red;">FakeFlix</a></h1>
         </nav>
     </header>
     <section>
@@ -27,9 +27,13 @@
             <a href="netflix.htm"><input type="button" value="Entrar" id="btn-login"></a>
             <p>OU</p>
             <input type="button" value="Usar um código de acesso" id="btn-cd">
-            <p>Esqueceu a senha?</p>
+            <a href="#">
+                <p>Esqueceu a senha?</p>
+            </a>
             <p> <input type="checkbox" name="" id=""> Lembra-se de mim</p>
-            <p>Novo por aqui? Assine agora</p>
+            <a href="#">
+                <p>Novo por aqui? Assine agora</p>
+            </a>
         </div>
     </section>
 </body>
