--- a/layouts/css/estilo-login.css
+++ b/layouts/css/estilo-login.css
@@ -2,6 +2,18 @@
     margin: 0px;
     padding: 0px;
 }
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.263);
+    z-index: -1;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     background: url(/images/bg.jpg);
@@ -9,6 +21,7 @@ body {
     color: white;
     text-align: center;
 }
+
 h1 {
     color: red;
     font-weight: bolder;
@@ -17,28 +30,12 @@ h1 {
     padding: 20px 120px;
     text-align: left;
 }
-h2 {
-    text-align: left;
-    margin: 40px 10px 20px 40px;
-}
-header {
-    height: 100px;
-}
-#div-btn {
-    text-align: right;
-    display: flexbox;
-    margin: -60px 100px;
-}
-#btn-entrar {
+
+a {
+    text-decoration: none;
     color: white;
-    font-size: 12pt;
-    font-weight: bold;
-    background-color: red;
-    width: 80px;
-    height: 30px;
-    border-radius: 5px;
-    border: none;
 }
+
 #caixa {
     background-color: rgba(0, 0, 0, 0.675); height: 100%;
     width: 400px;
@@ -48,6 +45,17 @@ header {
     border-radius: 4px;
 
 }
+
+h2 {
+    text-align: left;
+    margin: 40px 10px 20px 40px;
+}
+
+p {
+    font-size: 12pt;
+    padding: 10px;
+}
+
 .caixas-txt {
     width: 300px;
     height: 50px;
@@ -56,6 +64,13 @@ header {
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.468);
 }
+
+#div-btn {
+    text-align: right;
+    display: flexbox;
+    margin: -60px 100px;
+}
+
 #btn-login {
     color: white;
     font-size: 12pt;
@@ -66,6 +81,7 @@ header {
     border-radius: 3px;
     font-weight: bold;
     margin: 20px;
+    cursor: pointer;
 }
 #btn-cd {
     color: white;
@@ -77,8 +93,5 @@ header {
     border-radius: 3px;
     font-weight: bold;
     margin: 20px;
-}
-p {
-    font-size: 12pt;
-    padding: 10px;
+    cursor: pointer;
 }
