--- a/layouts/css/estilo-netflix.css
+++ b/layouts/css/estilo-netflix.css
@@ -4,21 +4,36 @@ body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 h1 {
     margin-top: 200px;
     font-size: 30pt;
 }
+
 img {
     max-width: 150px;
     max-height: 150px;
     padding: 5px;
+    cursor: pointer;
 }
+
+img:hover {
+    border: solid 3px white;
+    padding: 0;
+}
+
 #btn-perfis {
     margin: 30px;
     width: 170px;
     height: 40px;
     font-size: 12pt;
-    color: white;
+    color: grey;
     background-color: #141414;
+    border: 2px solid grey;
+    cursor: pointer;
+}
+
+#btn-perfis:hover {
+    color: white;
     border: 2px solid white;
 }
