--- a/layouts/css/estilo-index.css
+++ b/layouts/css/estilo-index.css
@@ -1,39 +1,30 @@
 * {
-    margin: 0px;
-    padding: 0px;
-}
-
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.263);
-    z-index: -1;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
     background: url(/images/bg.jpg);
-    font-size: 18pt;
+    font-size: 16px;
     color: white;
-    margin: 0px;
-    padding: 0px;
 }
 
 header {
-    height: 200px;
-    margin-bottom: 0px;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
 }
 
 h1 {
     color: red;
     font-weight: bolder;
-    font-size: 40pt;
+    font-size: 3.2rem;
     font-family: 'Bebas Neue', sans-serif; 
-    padding: 20px 120px;
+    padding-left: 60px;
 }
 
 a {
@@ -42,14 +33,18 @@ a {
 }
 
 #div-btn {
-    text-align: right;
-    display: flexbox;
-    margin: -60px 100px;
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center; /* Alinha os itens verticalmente ao centro */
+    margin-top: 10px;
+    position: absolute; /* Permite o posicionamento absoluto */
+    top: 40px; /* Distância do topo da tela */
+    right: 100px; /* Distância da direita da tela */
 }
 
 #btn-entrar {
     color: white;
-    font-size: 12pt;
+    font-size: 1rem;
     font-weight: bold;
     background-color: red;
     width: 80px;
@@ -60,47 +55,82 @@ a {
 }
 
 section {
-    margin-top: 0px;
+    padding: 20px;
 }
 
 #caixa {
-    height: 100%;
+    text-align: center;
 }
 
 h2 {
     font-weight: 900;
-    text-align: center;
-    margin: 10px;
-    padding: 20px;
-    font-size: 35pt;
+    font-size: 3rem;
+    margin-bottom: 10px;
 }
 
 p {
-    font-size: 18pt;
-    text-align: center;
-    margin: 15px;
+    font-size: 1.6rem;
+    margin: 15px 0;
 }
 
 #email {
-    width: 400px;
-    font-size: 13pt;
+    width: 80%;
+    max-width: 400px;
+    font-size: 1rem;
     color: white;
     background-color: rgba(0, 0, 0, 0.478);
-    height: 60px;
-    margin: 10px;
+    height: 40px;
+    margin: 10px auto;
     padding: 0px 10px;
     border-radius: 5px;
     border: solid 1px white;
 }
 
 #btn {
-    font-size: 17pt;
+    font-size: 1rem;
     color: white;
     font-weight: bold;
     background-color: red;
-    width: 170px;
-    height: 60px;
+    width: 100%;
+    max-width: 200px;
+    height: 40px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
+}
+
+/* Mídia Query para dispositivos menores */
+@media screen and (max-width: 768px) {
+    header {
+        height: auto;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    h1 {
+        font-size: 4.0rem;
+        margin-bottom: 10px;
+        padding: 0;
+    }
+
+    h2 {
+        font-weight: 900;
+        font-size: 2rem;
+        margin: 40px 10px;
+    }
+
+    p {
+        font-size: 1.2rem;
+        margin: 15px 0;
+    }
+
+    #div-btn {
+        margin: 50px 120px;
+    }
+
+    #btn-entrar {
+        width: auto;
+        padding: 5px 10px;
+    }
 }
