--- a/layouts/css/estilo-login.css
+++ b/layouts/css/estilo-login.css
@@ -1,11 +1,12 @@
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 body::before {
     content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -16,18 +17,20 @@ body::before {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: url(/images/bg.jpg);
-    font-size: 18pt;
+    background: url(/images/bg.jpg) no-repeat center center fixed;
+    background-size: cover;
+    font-size: 1.125em;
     color: white;
     text-align: center;
+    padding: 20px;
 }
 
 h1 {
     color: red;
     font-weight: bolder;
-    font-size: 40pt;
-    font-family: 'Bebas Neue', sans-serif; 
-    padding: 20px 120px;
+    font-size: 3.2em;
+    font-family: 'Bebas Neue', sans-serif;
+    padding: 20px;
     text-align: left;
 }
 
@@ -37,61 +40,57 @@ a {
 }
 
 #caixa {
-    background-color: rgba(0, 0, 0, 0.675); height: 100%;
-    width: 400px;
-    padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    background-color: rgba(0, 0, 0, 0.675);
+    max-width: 400px;
+    margin: 0 auto;
     border-radius: 4px;
-
+    padding: 20px;
 }
 
 h2 {
     text-align: left;
-    margin: 40px 10px 20px 40px;
+    margin: 40px 10px 20px;
 }
 
 p {
-    font-size: 12pt;
+    font-size: 0.75em; /* Equivalente a 12pt */
     padding: 10px;
 }
 
 .caixas-txt {
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     height: 50px;
-    margin: 10px;
+    margin: 10px auto;
     border-radius: 3px;
     padding: 5px;
     background-color: rgba(0, 0, 0, 0.468);
 }
 
 #div-btn {
-    text-align: right;
-    display: flexbox;
-    margin: -60px 100px;
+    display: flex;
+    justify-content: flex-end;
+    margin-top: -60px;
+}
+
+#btn-login,
+#btn-cd {
+    color: white;
+    font-size: 1em; /* Equivalente a 12pt */
+    width: 100%;
+    max-width: 300px;
+    height: 50px;
+    border: none;
+    border-radius: 3px;
+    font-weight: bold;
+    margin: 20px auto;
+    cursor: pointer;
 }
 
 #btn-login {
-    color: white;
-    font-size: 12pt;
     background-color: red;
-    width: 300px;
-    height: 50px;
-    border: none;
-    border-radius: 3px;
-    font-weight: bold;
-    margin: 20px;
-    cursor: pointer;
 }
+
 #btn-cd {
-    color: white;
-    font-size: 12pt;
     background-color: rgba(255, 255, 255, 0.23);
-    width: 300px;
-    height: 50px;
-    border: none;
-    border-radius: 3px;
-    font-weight: bold;
-    margin: 20px;
-    cursor: pointer;
 }
