--- a/layouts/css/estilo-netflix.css
+++ b/layouts/css/estilo-netflix.css
@@ -3,15 +3,16 @@ body {
     color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    padding: 20px; /* Adicionei um espaçamento interno ao corpo */
 }
 
 h1 {
-    margin-top: 200px;
-    font-size: 30pt;
+    margin-top: 10vh; /* Usando uma unidade relativa para a margem superior */
+    font-size: 3em;
 }
 
 img {
-    max-width: 150px;
+    max-width: 100%;
     max-height: 150px;
     padding: 5px;
     cursor: pointer;
@@ -23,10 +24,11 @@ img:hover {
 }
 
 #btn-perfis {
-    margin: 30px;
-    width: 170px;
+    margin: 5vh auto;
+    width: 80%;
+    max-width: 170px;
     height: 40px;
-    font-size: 12pt;
+    font-size: 1em;
     color: grey;
     background-color: #141414;
     border: 2px solid grey;
