--- a/estilo-login.css
+++ b/estilo-login.css
@@ -17,7 +17,7 @@ body::before {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: url(/images/bg.jpg) no-repeat center center fixed;
+    background: url(bg.jpg) no-repeat center center fixed;
     background-size: cover;
     font-size: 1.125em;
     color: white;
