--- a/estilo-login.css
+++ b/estilo-login.css
@@ -53,7 +53,7 @@ h2 {
 }
 
 p {
-    font-size: 0.75em; /* Equivalente a 12pt */
+    font-size: 0.75em;
     padding: 10px;
 }
 
@@ -76,7 +76,7 @@ p {
 #btn-login,
 #btn-cd {
     color: white;
-    font-size: 1em; /* Equivalente a 12pt */
+    font-size: 1em;
     width: 100%;
     max-width: 300px;
     height: 50px;
